.provarCaches/00D6C0000000xA6UAI/objects/Dupes_Created_Today__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record__c</fullName>
        <label>Contact Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DupeCatcher_Potential_Duplicate_ID__c</fullName>
        <label>DupeCatcher Potential Duplicate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Alert_Alert_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Alert: Alert Number</label>
        <referenceTo>SFSSDupeCatcher__Duplicate_Warning__c</referenceTo>
        <relationshipLabel>Dupes Created Today</relationshipLabel>
        <relationshipName>Dupes_Created_Today</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Number</label>
        <referenceTo>SFSSDupeCatcher__Potential_Duplicate__c</referenceTo>
        <relationshipLabel>Dupes Created Today</relationshipLabel>
        <relationshipName>Dupes_Created_Today</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Type__c</fullName>
        <label>Duplicate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Filter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Name</label>
        <referenceTo>SFSSDupeCatcher__Scenario_Rule__c</referenceTo>
        <relationshipLabel>Dupes Created Today</relationshipLabel>
        <relationshipName>Dupes_Created_Today</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Full Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dupes_Created_Today</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dupes_Created_Today3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dupes_Created_Today1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dupes Created Today</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dupes Created Today Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dupes Created Today</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>